# aurora

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Kconfig  LICENSE  README.md  Readme.md  SECURITY.md  run.sh  west.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  build_aurora.yaml  build_docs.yaml  container-image.yaml  container.yml  docker-image.yaml  docs.yml  release.yml
app/: sample.yaml
app/boards/: rpi_pico2_m33.overlay
app/src/: main.c
boards/: index.rst
boards/bench/: rpi_pico.md
cmake/: cmake_kconfig.cmake  compiler.cmake  kconfig.cmake
configs/: pico2_defconfig  pico2_w_defconfig  pico_defconfig  pico_w_defconfig  sensor_board_defconfig  test_defconfig
container/: .gitconfig  Dockerfile  Dockerfile.arm64  Dockerfile_arm64  Dockerfile_x86_64  bash_aliases  container-entrypoint.sh  entrypoint
container/dev/: Dockerfile
doc/: Doxyfile  README.md  architecture.md  architecture.rst  conf.py  configuration.md  configuration.rst  flight_logs  getting_started.md  getting_started.rst  index.md  index.rst  requirements.txt  testing.md  testing.rst  zephyr.md  zephyr.rst
doc/_doxygen/: main.md
doc/_extensions/: aurora_compat.py  aurora_domain.py
doc/_static/: custom.css
doc/api/: data.rst  drivers.rst  filter.rst  index.md  index.rst  notify.rst  powerfail.rst  pwm_melody.rst  sensors.rst  state.rst
doc/applications/: index.md  sensor_board.md
doc/drawio_src/: aurora_simple_state_machine.drawio  pad_link_architecture.drawio  sensor_board_bench.drawio  sensor_datapath.drawio  telemetry_architecture.drawio
doc/drivers/: index.md  pyro.rst
doc/lib/: data.rst  disk_led.md  filter.rst  index.md  notify.rst  pad_link.rst  powerfail.rst  sensors.rst  state.rst  telemetry.rst  watchdog.rst  wdt_recovery.rst
doc/tools/: gen_flight_replay.md  index.md  pad_link_central_example.md  plot_flight_data.md  rec_zephyr.md  sim_fetch.md  sim_flight_kalman.md  sweep_apogee.md  sync_defconfig.md
docs/: .gitignore  404.rst  CNAME  conf.py  index.rst  requirements.in  requirements.txt
drivers/: CMakeLists.txt  Kconfig
drivers/pyro/: CMakeLists.txt  Kconfig  pyro_shell.c
drivers/recovery/: Kconfig  recovery_shell.c
dts/bindings/: vendor-prefixes.txt
flight_logs/: index.md
flight_logs/2026-04-18/: Readme.md  flights.influx
flight_logs/2026-04-26/: Readme.md  flight_log.md
flight_logs/2026-05-03/: flight_log.md
flight_logs/multimeter/: flight_logs.md
flight_logs/sim_fetch/: Readme.md  flight_sim.md  flights.csv  flights.influx  state_audit
hummel_ctrl/: CMakeLists.txt  Kconfig  debug.conf  prj.conf  sample.yaml
hummel_ctrl/boards/: rpi_pico.conf  rpi_pico.overlay  rpi_pico2_hazard3.conf  rpi_pico2_hazard3.overlay
hummel_ctrl/src/: gyro.c  main.c  storage.c  usb_serial.c
include/lib/: baro.h  gyro.h  imu.h  storage.h  usb_serial.h
lib/: CMakeLists.txt  Kconfig
lib/apogee/: CMakeLists.txt  Kconfig  kalman.c
lib/console/: Kconfig  (+2 more)
micrometer/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
scripts/: docs.sh
sensor_board/: CMakeLists.txt  Kconfig  coredump.conf  debug.conf  prj.conf  sample.yaml
sensor_board/boards/: esp32s3_micrometer_esp32s3_procpu.conf  esp32s3_micrometer_esp32s3_procpu.overlay  esp32s3_micrometer_procpu.conf  esp32s3_micrometer_procpu.overlay  micrometer_esp32s3_procpu.conf  micrometer_esp32s3_procpu.overlay  micrometer_esp32s3_procpu_1.conf  micrometer_esp32s3_procpu_1.overlay  micrometer_esp32s3_procpu_2.conf  micrometer_esp32s3_procpu_2.overlay  native_sim.conf  native_sim.overlay  rpi_pico.conf  rpi_pico.dtsi  rpi_pico.overlay  rpi_pico2_hazard3.conf  rpi_pico2_hazard3.overlay  rpi_pico2_m33.conf  rpi_pico2_m33.overlay  rpi_pico2_rp2350a_m33_w.conf  rpi_pico2_rp2350a_m33_w.overlay  rpi_pico_rp2040_w.conf  rpi_pico_rp2040_w.overlay  sensor_board_v2.dtsi  sensor_board_v2_rp2040.conf  sensor_board_v2_rp2040.overlay  sensor_board_v2_rp2350a_hazard3.conf  sensor_board_v2_rp2350a_hazard3.overlay  sensor_board_v2_rp2350a_m33.conf  sensor_board_v2_rp2350a_m33_w.conf
sensor_board/snippets/nodisk/: nodisk.conf  snippet.yml
sensor_board/snippets/sim/: sim.conf  snippet.yml
sensor_board/src/: data.c  data.h  fake_sensors.c  fake_sensors_replay.c  fake_sensors_replay.h  imu.c  logger.c  logger.h  main.c  simple_storage.c  storage.c  usb_serial.c
src/: CMakeLists.txt  Kconfig  main.c
src/apps/: CMakeLists.txt  Kconfig  none_app.c  sensor_board.c
src/board/rp2040/: FreeRTOS_Kernel_import.cmake
src/board/rp2040/include/: FreeRTOSConfig.h
src/board/rp2350_arm/: FreeRTOS_Kernel_import.cmake
src/board/rp2350_arm/include/: FreeRTOSConfig.h
src/common/: CMakeLists.txt  Kconfig  log.c
src/drivers/: CMakeLists.txt  Kconfig  spi.c
src/drivers/flash/: CMakeLists.txt  spi_flash.c
src/drivers/misc/: CMakeLists.txt  crc.c
src/drivers/mmc/: CMakeLists.txt  Kconfig  mmc.c  mmc_core.c  spi_mmc.c  spi_mmc_old.c
src/drivers/sdcard/: CMakeLists.txt  spi_sd.c  spi_sdcard.c
src/include/aurora/: app.h  compiler.h  config.h  container_of.h  crc.h  list.h  log.h  macros.h  spi.h
src/include/aurora/drivers/: sdcard_io.h  spi.h  spi_flash.h
src/include/aurora/drivers/misc/: crc.h
src/include/aurora/drivers/mmc/: mmc.h  spi_mmc.h
src/include/aurora/drivers/sdcard/: spi_sd.h
src/include/aurora/task/: freertos_scheduling.h  watchdog_service.h
src/tasks/: CMakeLists.txt  Kconfig  freertos_scheduling.c  watchdog_service.c
telemetry_prototype/: CMakeLists.txt  Kconfig  debug.conf  prj.conf  sample.yaml
tests/lib/pad_link/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/pad_link/src/: main.c
tests/lib/telemetry/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/telemetry/boards/: qemu_x86.overlay
tests/lib/telemetry/src/: main.c
tools/: gen_flight_replay.py  influx_to_csv.py  pad_link_central_example.py  plot_flight_data.py  rec_zephyr.py  requirements.in  requirements.txt  sim_fetch.py  sim_flight_kalman.py  sweep_apogee.py  sync_defconfig.py
(+228 files in other folders)
